reconfiguration of the atomic descriptors for IAtomicDescriptor
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/trunk/cdk@6615 eb4e18e3-b210-0410-a6ab-dec725e4b171